@@ -87,6 +87,11 @@ Writing test cases
 The unittests use the :mod:`unittest` module together with nose_. See the
 examples in the ``MDAnalysisTests`` directory.
 
+Memory leak detection can be enabled for a class of tests by having it inherit
+:class:`MemleakTest` instead of :class:`TestCase` or just :class:`object`.
+This approach makes use of a `@classmethod` :meth:`setUpClass` in the
+:class:`MemleakTest` class, which should not be overridden in a test class.
+
 The `SciPy testing guidelines`_ are a good howto for writing test cases,
 especially as we are directly using this framework (imported from numpy).
 
@@ -104,7 +109,7 @@ especially as we are directly using this framework (imported from numpy).
 __version__ = "0.11.0-dev"  # keep in sync with RELEASE in setup.py
 
 try:
-    from numpy.testing import Tester, assert_equal
+    from numpy.testing import Tester, assert_equal, TestCase
 
     test = Tester().test
 except ImportError:
@@ -191,3 +196,37 @@ def executable_not_found_runtime(*args):
     """
     return lambda: executable_not_found(*args)
 
+class MemleakTest(TestCase):
+    @classmethod
+    def setUpClass(cls):
+        cls.leakedobjs = set()
+        try:
+            cls._tearDown = cls.tearDown
+        except AttributeError:
+            pass
+
+        def tearDown(self):
+            import gc
+            try:
+                self._tearDown()
+            except AttributeError:
+                pass
+            gc.collect()
+            # We have to keep track of previously seen leaks, otherwise
+            # we report them multiple times per test class.
+            latest_leaks = [ obj for obj in gc.garbage if obj not in self.leakedobjs ]
+            self.leakedobjs.update(gc.garbage)
+            if self._testMethodName == "test_that_memleaks":
+                # This one is actually supposed to leak
+                assert_(latest_leaks, "Failed to detect a memleak")
+                # Let's clean it up:
+                # this should resolve the circular reference and clear the uncollectable list
+                gc.garbage[0].s = None
+                gc.garbage[:] = []
+                gc.collect()
+                latest_leaks = [ obj for obj in gc.garbage if obj not in self.leakedobjs or obj in latest_leaks ]
+                assert_(not latest_leaks, "Failed to clean the memleak we created for testing purposes")
+            else:
+                assert_(not latest_leaks, "Memleak: GC failed to collect the following: {}".format(latest_leaks))
+
+        cls.tearDown = tearDown
